# lora

./: .gitignore  README.md  __init__.py  lora_layers.py  lora_transformer.py  pyproject.toml
glue_test/cola/: optimized_pretrained.ipynb  pretrained.ipynb
glue_test/sst-2/: lora.ipynb  optimized_lora.ipynb  optimized_pretrained.ipynb  pretrained.ipynb
roberta_tuning/: lora.ipynb  optimized_lora.ipynb
