[project]
name = "article2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "datasets>=4.4.1",
    "notebook>=7.5.0",
    "numpy>=2.0.2",
    "safetensors>=0.7.0",
    "scikit-learn>=1.6.1",
    "torch>=2.8.0",
    "transformers>=4.57.3",
]
